--- a/templates/index.html
+++ b/templates/index.html
@@ -223,7 +223,7 @@
       </section>
 
       <footer class="footer">
-        <small>© 2026 IEQ Central • Kid IEQ 2025</small>
+        <small>© 2026 IEQ Central • Kid IEQ </small>
       </footer>
     </main>
   </div>
